<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:example="http://schemas.android.com/apk/lib/com.appsomnia.wakemeup.util.preferences.NumberPickerPreference">
	<PreferenceCategory 
	    android:title="Service"
    >
    	<com.appsomnia.wakemeup.util.preferences.ToggleAlarmPreference
    		android:key="@string/alarm_preferences__toggleService"
    		android:title="@string/alarm_preferences__toggleService__str"
    		android:summary="@string/alarm_preferences__toggleService__summary"
    	/> 	    
	</PreferenceCategory>	
	<PreferenceCategory
		android:title="Call Settings"
		android:summary="Call related options"   
	>
	    <com.appsomnia.wakemeup.util.preferences.NumberPickerPreference
	        android:key="@string/alarm_preferences__vipOccurrenceLimit"
		    android:title="@string/alarm_preferences__vipOccurrenceLimit__str"
		    android:summary="@string/alarm_preferences__vipOccurrenceLimit__summary"
	        android:defaultValue="2"
	        example:maxValue="10"
	        example:minValue="1"
	    />	
		<com.appsomnia.wakemeup.util.preferences.ContactListPickerPreference
		    android:key="alarm_preferences__vip_name"
		    android:title="@string/alarm_preferences__vip_name__str"
		    android:summary="@string/alarm_preferences__vip_name__summary"
		/>	    
	</PreferenceCategory>	
	<PreferenceCategory 
	    android:title="Alarm Settings"
    	android:summary="Alarm related options"
    >
		<RingtonePreference
		    android:key="@string/alarm_preferences__alarmTone"
		    android:title="@string/alarm_preferences__alarmTone__str"    
		    android:summary="@string/alarm_preferences__alarmTone__summary"
		    android:ringtoneType="alarm"
		    android:showDefault="true"
		/>
	
	    <com.appsomnia.wakemeup.util.preferences.NumberPickerPreference
	        android:key="@string/alarm_preferences__time"
		    android:title="@string/alarm_preferences__time__str"
		    android:summary="@string/alarm_preferences__time__summary"
	        android:defaultValue="5"
	        example:maxValue="60"
	        example:minValue="1"
	    />		
	    <com.appsomnia.wakemeup.util.preferences.NumberPickerPreference
	        android:key="@string/alarm_preferences__snooze"
	        android:title="@string/alarm_preferences__snooze__str"
	        android:summary="@string/alarm_preferences__snooze__str"
	        android:defaultValue="5"
	        example:maxValue="60"
	        example:minValue="1"
	    />			
	    	    
	</PreferenceCategory>
</PreferenceScreen>
